tests/golden/type_errors/named_payload_mixed_pattern.cd
enum Result { Ok(value: number, other: number), Empty }
let result = Result.Ok(1, 2);
let label = match result {
  Result.Ok(value: first, second) => first,
  Result.Empty => 0,
};
