tests/golden/type_errors/named_payload_mixed_pattern.err
Type error at 4:10: variant pattern Result.Ok must use either all named or all positional payloads
    Result.Ok(value: first, second) => first,
           ^
